--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Education Hub</title>
     <!-- bootstrap css link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!--custom css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -48,7 +50,7 @@
 
 
                         </ul>
-                        <form class="d-flex" role="search">
+                        <form class="d-flex " role="search">
 
                             <button class="btn btn-outline-success" type="submit">Register</button>
                         </form>
@@ -58,6 +60,243 @@
         </section>
     </nav>
     <!-- navigation end -->
+    <!-- header start -->
+    <header>
+        <!-- banner start -->
+        <section class="container" id="banner">
+            <div class="row ">
+                <div class="col-lg-12  col-md-12 col-sm-auto">
+                    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="10000">
+                                <img src="./images/cover/rsz_cover-1.png" class="d-block  img-fluid rounded-3 "
+                                    alt="...">
+                                <div class="carousel-caption d-md-block text-white">
+                                    <div class="">
+                                        <h3 class="fw-bolder text-primary text-wrap">Get Started Digital
+                                            Learning</h3>
+                                        <p class="modal-fullscreen-down  "> <small>It is a long
+                                                established fact that a reader
+                                                <span>will be distracted by the
+                                                    readable
+                                                    content of a page when looking at its layout.</span></small>
+                                        </p>
+                                        <button class="btn btn-primary">Get started</button>
+
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="carousel-item">
+                                <img src="./images/cover/rsz_1cover-2.png" class="d-block img-fluid rounded-3 "
+                                    alt="...">
+                                <div class="carousel-caption d-lg-flex d-md-flex text-white">
+                                    <div class="banner_text ">
+                                        <h3 class="fw-bolder text-primary text-wrap">Get Started Digital
+                                            Learning</h3>
+                                        <p class=" modal-fullscreen-down fs-6">It is a long
+                                            established fact that a reader
+                                            will be distracted by the
+                                            readable
+                                            content of a page when looking at its layout.</p>
+                                        <button class="btn btn-primary">Get started</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!-- img-3 -->
+                            <div class="carousel-item">
+                                <img src="./images/cover/rsz_cover-3.png" class="d-block h-100 img-fluid rounded-3 "
+                                    alt="...">
+                                <div class="carousel-caption d-lg-flex  d-md-block text-white ">
+                                    <div class="banner_text ">
+                                        <h3 class="fw-bolder text-primary text-wrap ">Get Started Digital
+                                            Learning</h3>
+                                        <p class="modal-fullscreen-down fs-6">It is a long established fact that
+                                            a reader will be distracted by the readable
+                                            content of a page when looking at its layout.</p>
+                                        <button class="btn btn-primary">Get started</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- banner end -->
+        <!-- courses start -->
+        <section class="container my-5">
+            <h2 class="text-center pt-4 fw-bolder">Discover Our Popular <br> Courses</h2>
+            <p class="text-center pb-5">It is a long established fact that a reader will be distracted by the readable
+                <br> content of a page when looking at its layout.
+            </p>
+
+            <div class="row">
+                <!-- card-1 -->
+                <div class="col-lg-6 col-md-12 col-sm-12  p-2">
+                    <div class="d-lg-flex d-md-flex d-sm-block shadow-lg  rounded-3">
+                        <img src="./images/course/course-1.png" class="img-thumbnail border-0" alt="">
+                        <div class="p-3 d-flex align-items-center">
+                            <div>
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5>Price : 20$</h5>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="col-lg-6 col-md-12 col-sm-12 p-2">
+                    <div class="d-lg-flex d-md-flex d-sm-block shadow-lg  rounded-3">
+                        <img src="./images/course/course-2.png" class="img-thumbnail border-0" alt="">
+                        <div class="p-3 d-flex align-items-center">
+                            <div>
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5>Price : 20$</h5>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class="col-lg-6 col-md-12 col-sm-12 p-2">
+                    <div class="d-lg-flex d-md-flex d-sm-block shadow-lg  rounded-3">
+                        <img src="./images/course/course-3.png" class="img-thumbnail border-0" alt="">
+                        <div class="p-3 d-flex align-items-center">
+                            <div>
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5>Price : 20$</h5>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- card-4 -->
+                <div class="col-lg-6 col-md-12 col-sm-12 p-2">
+                    <div class="d-lg-flex d-md-flex d-sm-block shadow-lg  rounded-3">
+                        <img src="./images/course/course-4.png" class="img-thumbnail border-0" alt="">
+                        <div class="p-3 d-flex align-items-center">
+                            <div>
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5>Price : 20$</h5>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- card-5 -->
+                <div class="col-lg-6 col-md-12 col-sm-12 p-2">
+                    <div class="d-lg-flex d-md-flex d-sm-block shadow-lg  rounded-3">
+                        <img src="./images/course/course-5.png" class="img-thumbnail border-0" alt="">
+                        <div class="p-3 d-flex align-items-center">
+                            <div>
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5>Price : 20$</h5>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- card-6 -->
+                <div class="col-lg-6 col-md-12 col-sm-12 p-2">
+                    <div class="d-lg-flex d-md-flex d-sm-block shadow-lg  rounded-3">
+                        <img src="./images/course/course-6.png" class="img-thumbnail border-0" alt="">
+                        <div class="p-3 d-flex align-items-center">
+                            <div>
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5>Price : 20$</h5>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- button -->
+                <div class="col-lg-12">
+                    <div class="text-center ">
+                        <button class="btn btn-primary py-3 mt-3 px-5">View all</button>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- courses end -->
+
+        <!-- Ready to join start -->
+        <section class="container my-5 ">
+            <div class="row bg-primary p-5 rounded-3">
+                <div class="col-lg-7 col-md-12 text-white text-md-center col-sm-12  text-sm-center">
+                    <h2>Ready to join ?</h2>
+                    <p><small>It is a long established fact that a reader will be distracted by the
+                            readable content of a page when looking at its layout</small></p>
+                </div>
+                <!-- offset-2 tried(if needed) -->
+                <div class=" col-lg-5 col-md-12 col-sm-12  d-flex align-items-center justify-content-center">
+                    <div class="">
+                        <button class="btn btn-primary bg-light text-primary fw-bold " data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">Register now <a href="#"></a>
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Please register with necessary information
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- Ready to join end -->
+    </header>
+    <!-- header end -->
     <!-- bootstrap js link here -->
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
