--- a/index.html
+++ b/index.html
@@ -300,10 +300,16 @@
     <!-- main start -->
     <main>
         <!-- FAQ Questions  start-->
-        <section class="container">
-            <h2>Frequently Asked Questions</h2>
-            <p><small> It is a long established fact that a reader will be distracted by the readable
-                    content of a page when looking at its layout.</small></p>
+        <section class="container my-5">
+            <div class="d-flex justify-content-center py-4">
+                <div class="text-center">
+                    <h2>Frequently Asked Questions</h2>
+                    <p><small> It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</small></p>
+                </div>
+            </div>
+
+
 
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
@@ -312,7 +318,7 @@
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    What are difference between flex-box and grid?
+                                    <strong> What are difference between flex-box and grid?</strong>
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -328,22 +334,19 @@
                                 <h2 class="accordion-header" id="headingTwo">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        What are difference between Bootstrap and Tailwind;
+                                        <strong> What are difference between Bootstrap and Tailwind?</strong>
                                     </button>
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the second item's accordion body.</strong> It is hidden by
-                                        default,
-                                        until the collapse plugin adds the appropriate classes that we use to style each
-                                        element. These classes control the overall appearance, as well as the showing
-                                        and
-                                        hiding via CSS transitions. You can modify any of this with custom CSS or
-                                        overriding
-                                        our default variables. It's also worth noting that just about any HTML can go
-                                        within
-                                        the <code>.accordion-body</code>, though the transition does limit overflow.
+                                        <p>
+                                            Bootstrap is a component-based framework, which means it comes with prebuilt
+                                            components and includes other utilities for layering displays, spacing, etc.
+                                            Tailwind, on the other hand, CSS is a utility-first framework. Using
+                                            Tailwind CSS is akin to writing regular CSS. Unlike Bootstrap, it has no
+                                            prebuilt components
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -352,22 +355,19 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
-                                        What is css box model
+                                        <strong>What is css box model</strong>
                                     </button>
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the third item's accordion body.</strong> It is hidden by
-                                        default,
-                                        until the collapse plugin adds the appropriate classes that we use to style each
-                                        element. These classes control the overall appearance, as well as the showing
-                                        and
-                                        hiding via CSS transitions. You can modify any of this with custom CSS or
-                                        overriding
-                                        our default variables. It's also worth noting that just about any HTML can go
-                                        within
-                                        the <code>.accordion-body</code>, though the transition does limit overflow.
+                                        <p>
+                                            The CSS box model is a container that contains multiple properties including
+                                            borders, margin, padding, and the content itself. It is used to create the
+                                            design and layout of web pages. It can be used as a toolkit for customizing
+                                            the layout of different elements. The web browser renders every element as a
+                                            rectangular box according to the CSS box model.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -376,22 +376,18 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
-                                        What is a semantic tag?
+                                        <strong> What is a semantic tag?</strong>
                                     </button>
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the third item's accordion body.</strong> It is hidden by
-                                        default,
-                                        until the collapse plugin adds the appropriate classes that we use to style each
-                                        element. These classes control the overall appearance, as well as the showing
-                                        and
-                                        hiding via CSS transitions. You can modify any of this with custom CSS or
-                                        overriding
-                                        our default variables. It's also worth noting that just about any HTML can go
-                                        within
-                                        the <code>.accordion-body</code>, though the transition does limit overflow.
+                                        <p>
+                                            Semantic HTML elements are those that clearly describe their meaning in a
+                                            human- and machine-readable way. Elements such as "header" , "footer" and
+                                            "article" are all considered semantic because they accurately describe the
+                                            purpose of the element and the type of content that is inside them.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
