--- a/index.html
+++ b/index.html
@@ -396,6 +396,23 @@
                 </div>
         </section>
         <!-- FAQ Questions end -->
+        <!-- Trusted  companies start -->
+        <section class="container my-5 d-none d-lg-block d-xl-block d-xxl-block">
+            <h2 class="text-center py-4 fw-bolder">Trusted by over 800+ companies</h2>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class=" d-flex justify-content-around align-items-center ">
+                        <img src="./images/company/company-1.png" class="img-fluid pe-lg-1" alt="">
+                        <img src="./images/company/company-2.png" class="img-fluid pe-lg-1" alt="">
+                        <img src="./images/company/company-3.png" class="img-fluid pe-lg-1" alt="">
+                        <img src="./images/company/company-4.png" class="img-fluid pe-lg-1" alt="">
+                        <img src="./images/company/company-5.png" class="img-fluid pe-lg-1" alt="">
+                        <img src="./images/company/company-6.png" class="img-fluid pe-lg-1" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Trusted  companies end -->
     </main>
     <!-- main end -->
     <!-- bootstrap js link here -->
