--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education Hub</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/6b8abfe297.js" crossorigin="anonymous"></script>
     <!-- bootstrap css link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <!--custom css -->
@@ -415,6 +417,27 @@
         <!-- Trusted  companies end -->
     </main>
     <!-- main end -->
+    <!-- footer start -->
+    <footer class="container my-5">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 text-center text-white bg-dark py-5 rounded-1">
+                <h1>Edu Hub</h1>
+                <p>Dhaka,Airport-1229, Bangladesh</p>
+                <p>Privacy Ploicy | Terms of use</p>
+                <h6> Copyright © 2022 Md Ferdows Hasan</h6>
+                <div class="d-flex align-items-center justify-content-center ">
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook fs-2 p-3"></i></a>
+                    <a href="https://www.linkedin.com/"> <i class="fa-brands fa-linkedin fs-2 p-3"></i></a>
+                    <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter fs-2 p-3"></i></a>
+                    <a href="https://web.whatsapp.com/"><i class="fa-brands fa-square-whatsapp fs-2 p-3"></i></a>
+
+
+
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end -->
     <!-- bootstrap js link here -->
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
