footer logo and $ color change and course heading + color change

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                         <img src="./images/course/course-1.png" class="img-thumbnail border-0" alt="">
                         <div class="p-3 d-flex align-items-center">
                             <div>
-                                <h5>Fundamental Of UI/UX Design</h5>
-                                <p>Some quick example text to build on the card title
+                                <h5 class="fw-bold ">Fundamental Of UI/UX Design</h5>
+                                <p class="text-black-50">Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5>Price : 20$</h5>
+                                <h5 class="text-primary">Price : 200$</h5>
                             </div>
 
                         </div>
@@ -176,10 +176,10 @@
                         <img src="./images/course/course-2.png" class="img-thumbnail border-0" alt="">
                         <div class="p-3 d-flex align-items-center">
                             <div>
-                                <h5>Fundamental Of UI/UX Design</h5>
-                                <p>Some quick example text to build on the card title
+                                <h5 class="fw-bold "> Fullstack Web Development </h5>
+                                <p class="text-black-50">Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5>Price : 20$</h5>
+                                <h5 class="text-primary">Price : 205$</h5>
                             </div>
 
                         </div>
@@ -191,10 +191,10 @@
                         <img src="./images/course/course-3.png" class="img-thumbnail border-0" alt="">
                         <div class="p-3 d-flex align-items-center">
                             <div>
-                                <h5>Fundamental Of UI/UX Design</h5>
-                                <p>Some quick example text to build on the card title
+                                <h5 class="fw-bold ">Photography Basic Rules</h5>
+                                <p class="text-black-50">Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5>Price : 20$</h5>
+                                <h5 class="text-primary">Price : 120$</h5>
                             </div>
 
                         </div>
@@ -206,10 +206,10 @@
                         <img src="./images/course/course-4.png" class="img-thumbnail border-0" alt="">
                         <div class="p-3 d-flex align-items-center">
                             <div>
-                                <h5>Fundamental Of UI/UX Design</h5>
-                                <p>Some quick example text to build on the card title
+                                <h5 class="fw-bold ">Digital Marketing</h5>
+                                <p class="text-black-50">Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5>Price : 20$</h5>
+                                <h5 class="text-primary">Price : 250$</h5>
                             </div>
 
                         </div>
@@ -221,10 +221,10 @@
                         <img src="./images/course/course-5.png" class="img-thumbnail border-0" alt="">
                         <div class="p-3 d-flex align-items-center">
                             <div>
-                                <h5>Fundamental Of UI/UX Design</h5>
-                                <p>Some quick example text to build on the card title
+                                <h5 class="fw-bold ">Digital Marketing</h5>
+                                <p class="text-black-50">Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5>Price : 20$</h5>
+                                <h5 class="text-primary">Price : 200$</h5>
                             </div>
 
                         </div>
@@ -236,10 +236,10 @@
                         <img src="./images/course/course-6.png" class="img-thumbnail border-0" alt="">
                         <div class="p-3 d-flex align-items-center">
                             <div>
-                                <h5>Fundamental Of UI/UX Design</h5>
-                                <p>Some quick example text to build on the card title
+                                <h5 class="fw-bold ">Motion Graphics</h5>
+                                <p class="text-black-50">Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5>Price : 20$</h5>
+                                <h5 class="text-primary">Price : 100$</h5>
                             </div>
 
                         </div>
@@ -261,7 +261,8 @@
             <div class="row bg-primary p-5 rounded-3">
                 <div class="col-lg-7 col-md-12 text-white text-md-center col-sm-12  text-sm-center">
                     <h2>Ready to join ?</h2>
-                    <p><small>It is a long established fact that a reader will be distracted by the
+                    <p><small>It is a long established fact that a reader will be distracted by
+                            the
                             readable content of a page when looking at its layout</small></p>
                 </div>
                 <!-- offset-2 tried(if needed) -->
@@ -421,7 +422,7 @@
     <footer class="container my-5">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 text-center text-white bg-dark py-5 rounded-1">
-                <h1>Edu Hub</h1>
+                <h1> <span class="text-warning">Edu </span> Hub</h1>
                 <p>Dhaka,Airport-1229, Bangladesh</p>
                 <p>Privacy Ploicy | Terms of use</p>
                 <h6> Copyright © 2022 Md Ferdows Hasan</h6>
