--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
                                         columns at the same time.</p>
                                 </div>
                             </div>
+                            <!-- two -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingTwo">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -353,6 +354,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- three -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingThree">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -374,16 +376,17 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- four -->
                             <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingThree">
+                                <h2 class="accordion-header" id="headingfour">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseThree" aria-expanded="false"
-                                        aria-controls="collapseThree">
+                                        data-bs-target="#collapsefour" aria-expanded="false"
+                                        aria-controls="collapsefour">
                                         <strong> What is a semantic tag?</strong>
                                     </button>
                                 </h2>
-                                <div id="collapseThree" class="accordion-collapse collapse"
-                                    aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour"
+                                    data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <p>
                                             Semantic HTML elements are those that clearly describe their meaning in a
