--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <!-- header start -->
     <header>
         <!-- banner start -->
-        <section class="container" id="banner">
+        <section class="container mt-3" id="banner">
             <div class="row ">
-                <div class="col-lg-12  col-md-12 col-sm-12">
+                <div class="col-lg-12  col-md-12 col-sm-12 ">
                     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0"
@@ -153,7 +153,7 @@
 
                                 <div class="carousel-caption  text-white ">
 
-                                    <h1 class="fw-bolder text-warning text-wrap ">Get Started Digital
+                                    <h1 class="fw-bolder text-warning  ">Get Started Digital
                                         Learning</h1>
                                     <p class=" mt-3">It is a long established fact that
                                         a reader will be distracted by the readable
